plugins {
    id 'dev.architectury.loom' version '1.17-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.5-SNAPSHOT'
    id 'com.gradleup.shadow' version '9.4.3' apply false
}

architectury {
    minecraft = project.minecraft_version
}

// RPG Series dev workspace flags (see fabric/workspace-runtime.gradle). Each flag loads one group of
// content mods into the dev runtime. Sources, in priority order: `-P<flag>=<bool>` on the command
// line, else the gitignored `workspace.properties` (template: workspace.properties.example).
ext.rpgSeriesWorkspaceFlags = ["rpg_series_classes", "rpg_series_gear", "rpg_series_accessories", "rpg_series_skills"]
ext.rpgSeriesWorkspace = {
    def local = rootProject.file("workspace.properties")
    def props = new Properties()
    if (local.exists()) { local.withInputStream { props.load(it) } }
    def flags = [:]
    for (name in rpgSeriesWorkspaceFlags) {
        def cli = providers.gradleProperty(name).orNull
        flags[name] = (cli != null ? cli : props.getProperty(name, "false")).toBoolean()
    }
    return flags
}()
ext.rpgSeriesWorkspaceAny = rpgSeriesWorkspace.values().any { it }

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'

    base {
        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
        archivesName = "$rootProject.archives_name-$project.name"
    }
    version = rootProject.mod_version + "+${rootProject.minecraft_version}"

    repositories {
        // Add repositories to retrieve artifacts from in here.
        // You should only use this when depending on other mods because
        // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
        // See https://docs.gradle.org/current/userguide/declaring_repositories.html
        // for more information about repositories.
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        // Plain Yarn on the 1.20.1 line (no NeoForge mappings patch layer).
        mappings "net.fabricmc:yarn:$rootProject.yarn_mappings:v2"
    }

    java {
        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
        // if it is present.
        // If you remove this line, sources will not be generated.
        withSourcesJar()

        // Java 17 is the bytecode target for 1.20.1; Gradle itself must run on JDK 21+ (Loom 1.17 requirement).
        // No toolchain block on purpose (see docs/version-adoption-1.20.1/briefs/toolchain-1.20.1-recipe.md §0).
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 17
        // TODO 1.20.1: remove — temporary, so javac reports the complete error list during the port.
        it.options.compilerArgs << "-Xmaxerrs" << "5000"
    }

    // Configure Maven publishing.
    publishing {
        publications {
            mavenJava(MavenPublication) {
                artifactId = base.archivesName.get()
                from components.java
            }
        }

        // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
        repositories {
            // Add repositories to publish to here.
            // Notice: This block does NOT have the same function as the block in the top level.
            // The repositories here will be used for publishing your artifact, not for
            // retrieving dependencies.
        }
    }
}

ext.changelog_last_section = { ->
    return new File("CHANGELOG.md").text.split('\n# ')[0]
}
